Basically only change the social about bar. WIP

--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 layout: about
 title: About
 group: navigation
-tagline: Hi I'm Antonio the creator of FullIt jekyll theme
-tags : [intro, beginner, jekyll, tutorial]
-img : about1.jpg
+tagline: Hi, we are Kibi Games.
+tags : [intro, beginner]
+img : kibi_logo_final_02.png
 author : Antonio Trento
-img2 : about2.jpg
-img3 : about3.jpg
-author : Antonio Trento
-title2 : Know more about me
+img2 : KibiLogoAnim.gif
+img3 : front_pict_02.png
+author : Victor Lee
+title2 : More about Kibi Games
 title3 : By scroll down
 css: 
 js:
@@ -24,7 +24,7 @@ canonical: https://fullit.github.io
 	  <p class="lead">About me and what I do in my life.</p>
 	  <hr class="my-4">
 	</div>
-	<p>Hello guys! They are Antonio da Varese in Italy.</p>
+	<p>Helloooooooo guys! They are Antonio da Varese in Italy.</p>
 
 	<p>I have a background in computer science and are interested in web design, web marketing and grow hacking.</p>
 
