--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ canonical: https://kibigames.github.io
 						<span class="mouse-dot"></span>
 					</span>
 					<span style="color:white; margin-left:-35px;" data-menuanchor="0section" href="#0section">back to top</span>
+					<a href="{{ BASE_PATH }}/assets/ad.html"></a>
 				</a>
 			</div>
 	</div>
