Replace with new bg images.

--- a/assets/test/Ave_Counting_2020_Ranking/index.html
+++ b/assets/test/Ave_Counting_2020_Ranking/index.html
@@ -27,8 +27,8 @@
 <body >
 	
 	<div class="limiter" >
-		<div class="container-table100" style="background: url('images/leaderboard_bg.png') top; background-repeat:repeat-x; background-color:#FFFFFF; padding: 0px 0px">
-			<div class="container-table100" style="background: url('images/leaderboard_bg02.png') top; background-repeat:no-repeat;">
+		<div class="container-table100" style="background: url('images/leaderboard_bg00.png') top; background-repeat:repeat-x; background-color:#F5EFD9; padding: 0px 0px">
+			<div class="container-table100" style="background: url('images/leaderboard_bg_front.png') top; background-repeat:no-repeat;">
 					<div class="table100 ver5 m-b-110">
 						<table data-vertable="ver5">
 							<thead>
@@ -42,7 +42,7 @@
 								<tr id="placeholder" class="row100"><td class="column100 column1">呼唷</td><td class="column100 column2">讀取中...</td><td class="column100 column3">等待過久請嘗試重整網頁</td></tr>
 							</tbody>
 						</table>
-						<label id="placeholder2">*Adblock要關掉唷*</label >
+						<label id="placeholder2">*一直失敗的話，Adblock或Policy Blocker可以關掉試試唷*</label >
 					</div>
 				</div>
 			</div>
